--- a/style.css
+++ b/style.css
@@ -1,11 +1,18 @@
+:root {
+    --light-gray: #CBCBCB;
+    --dark-gray: #757575;
+}
+
 html, body {
     height: 100vh;
     margin: 0px;
     display: flex;
     flex-direction: row;
+    font-family: 'Bebas Neue', sans-serif;
 }
 
 .sidebar {
+    flex: 1;
     width: 65vh;
     background-image: url(images/jake-weirick-iM1rrbseXak-unsplash.jpg);
     background-size: auto 100%;
@@ -13,30 +20,54 @@ html, body {
 }
 
 .container {
+    flex: 2;
     display: flex;
     flex-direction: column;
     align-items: left;
-    padding: 32px;
+    background-color: var(--light-gray);
+}
+
+.caption,
+.form-container,
+.submit {
+    padding: 5vh;
 }
 
 .caption {
-    flex: 3;
+    flex: 1;
+    font-size: 24px;
+    padding-top: 16vh;
+}
+
+.form-container {
+    background-color: white;
+    width: 100%;
+    padding: 5vh;
 }
 
 form {
-    flex: 4;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex: 7;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 16px;
     justify-content: space-between;
-    align-content: flex-start;
 }
 
 form .col {
-    flex: 1;
-    width: 50%;
+    width: 60%;
+}
+
+label {
+    font-size: 14px;
+    font-weight: bolder;
+    padding: 8px 8px;
+}
+
+input[type=text] {
+    width: 100%;
+    padding: 12px 24px;
 }
 
 .submit {
-    flex: 3;
+    flex: 1.5;    
 }
