--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-    --light-gray: #CBCBCB;
+    --light-gray: #F5F5F5;
     --dark-gray: #757575;
 }
 
@@ -19,6 +19,19 @@ html, body {
     background-repeat: no-repeat;
 }
 
+.logo {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.logo-pic {
+    border-radius: 50%;
+    box-shadow: 0 0 75vh var(--light-gray);
+}
+
 .container {
     flex: 2;
     display: flex;
@@ -34,19 +47,21 @@ html, body {
 }
 
 .caption {
-    flex: 1;
+    flex: 2.5;
     font-size: 24px;
-    padding-top: 16vh;
+    margin-bottom: auto;
+    /* padding-top: 16vh; */
 }
 
 .form-container {
     background-color: white;
     width: 100%;
     padding: 5vh;
+    box-shadow: 10px 4px 8px var(--dark-gray);
 }
 
 form {
-    flex: 7;
+    flex: 5;
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 16px;
@@ -69,5 +84,20 @@ input[type=text] {
 }
 
 .submit {
-    flex: 1.5;    
+    flex: 2.5;    
+}
+
+input[type=submit] {
+    font-size: 24px;
+    font-family: 'Bebas Neue', sans-serif;
+    border-radius: 12px;
+    border-style: none;
+    background-color: white;
+    padding: 12px 24px;
+    transition-duration: 0.2s;
+}
+
+input[type=submit]:hover {
+    background-color: black;
+    color: white;
 }
